@@ -182,6 +182,7 @@ extern "C" {
 
 #define hwloc_topology_get_depth HWLOC_NAME(topology_get_depth)
 #define hwloc_get_type_depth HWLOC_NAME(get_type_depth)
+#define hwloc_get_type_depth_with_attr HWLOC_NAME(get_type_depth_with_attr)
 #define hwloc_get_memory_parents_depth HWLOC_NAME(get_memory_parents_depth)
 
 #define hwloc_get_type_depth_e HWLOC_NAME(get_type_depth_e)
